Login dan Menampilkan Buku

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 	<body>
 		<div class="login">
 			<h1>My Personal Library</h1>
-			<form method="post">
+			<form method="post" action="services/index.php">
 				<input type="text" name="username" placeholder="Username" id="username" />
 				<input type="password" name="password" placeholder="Password" id="password" />
-				<input type="button" class="submit-btn" value="Login"></input>
+				<input type="submit" class="submit-btn" value="Login"></input>
 			</form>
 		</div>
 		<script src="js/jquery-3.1.0.min.js"></script>
-		<script src="js/login.js"></script>
 	</body>
 </html>
 
